--- a/DannyApp/app/src/main/res/layout/pokemonlist_item.xml
+++ b/DannyApp/app/src/main/res/layout/pokemonlist_item.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.dannyappPokemonApp.Pokemonlistacitvity">
+    tools:context="com.example.dannyappPokemonApp.Pokemonlistacitvity"
+    android:background="@drawable/lillebilledet">
+
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
