--- a/DannyApp/app/src/main/res/values/dimen.xml
+++ b/DannyApp/app/src/main/res/values/dimen.xml
@@ -4,6 +4,8 @@
     <dimen name= "Pokemon_title_text_size">20sp</dimen>
     <dimen name= "small_text">16sp</dimen>
     <dimen name= "recycler_loading_view_height">80dp</dimen>
-
+    <dimen name="default_padding">16dp</dimen>
+    <dimen name="drawable_padding">5dp</dimen>
+    <dimen name="app_name_size">42sp</dimen>
 
 </resources>
