4 separate kolonner i pokekort
Kan vise 4 separate kolonner af pokemons efter man har trykket på sets.

--- a/DannyApp/app/src/main/res/layout/pokemon_recyclecardslist.xml
+++ b/DannyApp/app/src/main/res/layout/pokemon_recyclecardslist.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.dannyappPokemonApp.PokemonCardsActivtity"
+    android:orientation="horizontal"
     android:background="@drawable/lillebilledet">
 
 
@@ -29,6 +30,7 @@
             </androidx.appcompat.widget.SearchView>
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
