Pokemon fits perfect!!
pokemon image fits

--- a/DannyApp/app/src/main/res/layout/activity_pokemoncarditems.xml
+++ b/DannyApp/app/src/main/res/layout/activity_pokemoncarditems.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
+    android:layout_margin="2dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/ScrollViewParent"
@@ -10,30 +10,32 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
-        app:cardCornerRadius="8dp"
+        app:cardCornerRadius="2dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY">
 <LinearLayout
-    android:padding="16dp"
+    android:padding="3dp"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/LinearLayoutContainer">
 
 
-<ImageView
-    android:id="@+id/Pokemoncard_image"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
-    android:src="@drawable/ic_launcher_background"/>
+    <ImageView
+        android:id="@+id/Pokemoncard_image"
+        android:layout_width="120dp"
+        android:layout_height="165dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_launcher_background" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:textColor="#000"
         android:text="name"
         android:layout_gravity="center_horizontal"
-        android:textSize="20dp"
+        android:textSize="10dp"
         android:id="@+id/Pokemoncardtxt"
         />
 
