--- a/DannyApp/app/src/main/res/layout/layoutpokemonlist_item.xml
+++ b/DannyApp/app/src/main/res/layout/layoutpokemonlist_item.xml
@@ -3,14 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@drawable/lillebilledet">
+    android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/card_view"
-        app:cardElevation="20dp">
+        android:id="@+id/card_view">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,8 +17,8 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/Pokemon_image_height"
-                android:scaleType="centerCrop"
+                android:layout_height="150dp"
+                android:scaleType="fitXY"
                 android:id="@+id/Pokemon_image"
                 android:src="@drawable/ic_launcher_background"/>
 
@@ -28,12 +26,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
                     android:textSize="@dimen/Pokemon_title_text_size"
                     android:textColor="#000"
                     android:id="@+id/Pokemon_title"/>
@@ -42,7 +40,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="100">
+                    android:weightSum="0">
 
                     <TextView
                         android:layout_width="0dp"
